# richclip

./: CHANGES.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  release_pre_build.sh  rust.yml  rustfmt.yml
src/: main.rs
src/clipboard/: mac.rs  mime_type.rs  mod.rs  wayland.rs  win.rs  x.rs
src/protocol/: mod.rs  recv.rs  source_data.rs
test/bats/: wayland.bats  wayland_paste.bats  x.bats  x_incr.bats
test/bats/loopback/: loopback.bats
test/bats/mac/: mac.bats
test/bats/wayland/: wayland.bats
test/bats/x/: setup_suite.bash  x.bats  x_incr.bats
