[package]
name = "richclip"
version = "0.2.1"
edition = "2021"
authors = ["beeender"]
build = "build.rs"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
daemonize = "0.5.0"
log = "0.4.22"
wayrs-client = "1.1.3"
wayrs-protocols = { version = "0.14.4",  features = ["wlr-data-control-unstable-v1"] }
libc = "0.2.168"
xcb = { version = "1.5.0", features = [] }
x11rb = { version = "0.13.1", features = [] }
simplelog = "0.12.2"
nix = "0.29.0"

[build-dependencies]
vergen-git2 = { version = "1.0.2", features = ["build", "cargo"] }
