[package]
name = "richclip"
version = "0.2.1"
edition = "2021"
authors = ["beeender"]
build = "build.rs"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
daemonize = "0.5.0"
log = "0.4.22"
libc = "0.2.168"
simplelog = "0.12.2"

[target.'cfg(target_os = "linux")'.dependencies]
wayrs-client = { version = "1.1.3" }
wayrs-protocols = { version = "0.14.4",  features = ["wlr-data-control-unstable-v1"] }
x11rb = { version = "0.13.1", features = [] }
nix = "0.29.0"

[target.'cfg(target_os = "macos")'.dependencies]
x11rb = { version = "0.13.1", features = [] }

[build-dependencies]
vergen-git2 = { version = "1.0.2", features = ["build", "cargo"] }
