[package]
name = "richclip"
version = "0.3.0"
edition = "2024"
authors = ["beeender"]
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.27"
simplelog = "0.12.2"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
daemonize = "0.5.0"
libc = "0.2.172"
wayrs-client = { version = "1.3.1" }
wayrs-protocols = { version = "0.14.9",  features = ["wlr-data-control-unstable-v1"] }
x11rb = { version = "0.13.1", features = [] }
nix = "0.29.0"

[target.'cfg(target_os = "macos")'.dependencies]
x11rb = { version = "0.13.1", features = [] }
cocoa = { version = "0.26.0" }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.0"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["build", "cargo"] }
